replaced the left margin for contract button with nbsp

--- a/contract-signature.html
+++ b/contract-signature.html
@@ -17,36 +17,34 @@
     </header>
     <section>
         <div class="container">
-            <div class="row">
-                <h2 class="blue inner-pages">Congratulations, the process has been completed successfully.
-                    You may now proceed the process with the contract signature.
-                </h2>
-                <p>
-                    Please take time to carefully read the contract on the next page. The signature process of the contract
-                    will then proceed in 3 simple steps.
-                </p>
-                <ol class="contract-process">
-                    <li>A certificate valid for this process will be issued.</li>
-                    <li>Using this certificate the contract will be signed electronically and thereby become legally
-                        binding.</li>
-                    <li>At the end of the process you will be asked to enter a TAN number that we will send to your
-                        mobile phone via SMS.</li>
-                </ol>
-                <p class="sign-contract-p">
-                    Please proceed here to sign the contract
-                    <a href="#" class="btn btn-default submit-form sign-contract">
-                        <span class="glyphicon glyphicon-triangle-right"></span>Sign the Contract</a>
-                </p>
-                <p>
-                    Should you opt to proceed at a later time, then please do so by using the following URL:
-                    <br class="normal-lineheight"/>
-                    <a href="#">https://webid-gateway.de//service/qa/cn/000022/aid/100230109</a>
-                </p>
+            <h2 class="blue inner-pages">Congratulations, the process has been completed successfully.
+                You may now proceed the process with the contract signature.
+            </h2>
+            <p>
+                Please take time to carefully read the contract on the next page. The signature process of the contract
+                will then proceed in 3 simple steps.
+            </p>
+            <ol class="contract-process">
+                <li>A certificate valid for this process will be issued.</li>
+                <li>Using this certificate the contract will be signed electronically and thereby become legally
+                    binding.</li>
+                <li>At the end of the process you will be asked to enter a TAN number that we will send to your
+                    mobile phone via SMS.</li>
+            </ol>
+            <p class="sign-contract-p">
+                Please proceed here to sign the contract&nbsp;&nbsp;&nbsp;
+                <a href="#" class="btn btn-default submit-form sign-contract">
+                    <span class="glyphicon glyphicon-triangle-right"></span>Sign the Contract</a>
+            </p>
+            <p>
+                Should you opt to proceed at a later time, then please do so by using the following URL:
                 <br class="normal-lineheight"/>
-                <p>For questions about WebID Solutions, please
-                    contact: <a href="mailto:customerservice@webid-solutions.de">customerservice@webid-solutions.de</a>
-                </p>
-            </div>
+                <a href="#">https://webid-gateway.de</a>
+            </p>
+            <br class="normal-lineheight"/>
+            <p>For questions about WebID Solutions, please
+                contact: <a href="mailto:customerservice@webid-solutions.de">customerservice@webid-solutions.de</a>
+            </p>
         </div>
     </section>
     <footer class="footer-margin-top">
