--- a/availability.html
+++ b/availability.html
@@ -28,7 +28,19 @@
                 </p>
             </div>
         </div>
-    </div>
+    </section>
+    <footer class="footer-margin-top">
+        <div class="container">
+            <p>&copy;Copyright <span id="currYear">2016</span> - CRIF AT</p>
+            <ul class="list-inline">
+                <li><a href="#">Impressum</a></li>
+                <li> | </li>
+                <li><a href="#">Contact</a></li>
+                <li> | </li>
+                <li><a href="#">Privacy Policy</a></li>
+            </ul>
+        </div>
+    </footer>
     <script src="js/vendor/jquery-3.1.1.min.js"></script>
     <script src="js/vendor/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
