--- a/index.html
+++ b/index.html
@@ -74,37 +74,42 @@
                         <p class="thank-you">Thank you for choosing WebID!</p>
                     </div>
                     <form class="form-horizontal" id="user-form">
-                        <div class="form-group">
+                        <div class="form-group inputTitle has-error-feedback">
                             <label for="inputTitle" class="col-sm-3 control-label">Title<sup>*</sup></label>
                             <div class="col-sm-8 input-holder">
-                                <select id="inputTitle">
+                                <select id="inputTitle" class="tick">
                                     <option selected>Mr.</option>
                                     <option>Mrs.</option>
                                     <option>Ms.</option>
                                 </select>
                             </div>
+                            <div class="clearfix"></div>
+                            <p class="error-feedback">Please select a suitable title</p>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group inputFirstName">
                             <label for="inputFirstName" class="col-sm-3 control-label">First Name(All)<sup>*</sup></label>
                             <div class="col-sm-8 input-holder">
                                 <input type="text" class="form-control" id="inputFirstName" placeholder="First Name">
                             </div>
+                            <p class="error-feedback">Invalid First Name</p>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group inputFamilyName">
                             <label for="inputFamilyName" class="col-sm-3 control-label">Family Name<sup>*</sup></label>
                             <div class="col-sm-8 input-holder">
                                 <input type="text" class="form-control" id="inputFamilyName" placeholder="Family Name">
                             </div>
+                            <p class="error-feedback">Invalid Family Name</p>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group inputMonth inputDate inputYear">
                             <label for="inputDOB" class="col-sm-3 control-label">Date Of Birth<sup>*</sup></label>
                             <div id="inputDOB" class="col-sm-8 input-holder">
                                 <input type="text" class="form-control dob-input" id="inputMonth" placeholder="MM">
                                 <input type="text" class="form-control dob-input" id="inputDate" placeholder="DD">
                                 <input type="text" class="form-control dob-input" id="inputYear" placeholder="YYYY">
                             </div>
+                            <p class="error-feedback">Invalid Date of Birth</p>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group inputNationality">
                             <label for="inputNationality" class="col-sm-3 control-label">
                                 Staatsangehörigkeit<sup>*</sup>
                             </label>
@@ -116,24 +121,29 @@
                                     <option>United States of America</option>
                                 </select>
                             </div>
+                            <p class="error-feedback">Invalid Country</p>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group inputStreet inputStrtNo">
                             <label for="inputStreet" class="col-sm-3 control-label">Street<sup>*</sup></label>
                             <div class="col-sm-8 input-holder">
                                 <input type="text" class="form-control" id="inputStreet" placeholder="Street">
                                 <label for="inputStrtNo" class="col-sm-3 control-label str-no">No.<sup>*</sup></label>
                                 <input type="text" class="form-control" id="inputStrtNo" placeholder="No.">
                             </div>
+                            <p class="error-feedback">Invalid Street and No</p>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group inputPostal inputCity has-code-error-feedback">
                             <label for="inputPostal" class="col-sm-3 control-label">Postal Code<sup>*</sup></label>
                             <div class="col-sm-8 input-holder">
                                 <input type="text" class="form-control" id="inputPostal" placeholder="Postal Code">
+                                <div class="clearfix visible-xs"></div>
+                                <p class="error-code-feedback hidden-sm hidden-md hidden-lg">Invalid Code</p>
                                 <label for="inputCity" class="col-sm-3 control-label city">City<sup>*</sup></label>
                                 <input type="text" class="form-control" id="inputCity" placeholder="City">
                             </div>
+                            <p class="error-feedback">Invalid Code and City</p>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group inputCountry">
                             <label for="inputCountry" class="col-sm-3 control-label">Country<sup>*</sup></label>
                             <div class="col-sm-8 input-holder">
                                 <select id="inputCountry">
@@ -143,12 +153,14 @@
                                     <option>United States of America</option>
                                 </select>
                             </div>
+                            <p class="error-feedback">Invalid Country</p>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group inputEmail">
                             <label for="inputEmail" class="col-sm-3 control-label">E-mail<sup>*</sup></label>
                             <div class="col-sm-8 input-holder">
                                 <input type="email" class="form-control" id="inputEmail" placeholder="E-mail">
                             </div>
+                            <p class="error-feedback">Invalid Email</p>
                         </div>
                         <div class="form-group">
                             <label for="inputPhone" class="col-sm-3 control-label">Phone</label>
@@ -156,11 +168,12 @@
                                 <input type="tel" class="form-control" id="inputPhone" placeholder="Phone">
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label for="inputPhone" class="col-sm-3 control-label">Mobile<sup>*</sup></label>
+                        <div class="form-group inputMobile">
+                            <label for="inputMobile" class="col-sm-3 control-label">Mobile<sup>*</sup></label>
                             <div class="col-sm-8 input-holder">
                                 <input type="tel" class="form-control" id="inputMobile" placeholder="Mobile">
                             </div>
+                            <p class="error-feedback">Invalid Mobile number</p>
                         </div>
                         <div class="form-group">
                             <div class="col-sm-offset-3 col-sm-8 input-holder">
