form validations script added

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
                         <p class="thank-you">Thank you for choosing WebID!</p>
                     </div>
                     <form class="form-horizontal" id="user-form">
-                        <div class="form-group inputTitle has-error-feedback">
+                        <div class="form-group inputTitle">
                             <label for="inputTitle" class="col-sm-3 control-label">Title<sup>*</sup></label>
                             <div class="col-sm-8 input-holder">
-                                <select id="inputTitle" class="tick">
+                                <select id="inputTitle">
                                     <option selected>Mr.</option>
                                     <option>Mrs.</option>
                                     <option>Ms.</option>
@@ -91,6 +91,7 @@
                             <div class="col-sm-8 input-holder">
                                 <input type="text" class="form-control" id="inputFirstName" placeholder="First Name">
                             </div>
+                            <div class="clearfix"></div>
                             <p class="error-feedback">Invalid First Name</p>
                         </div>
                         <div class="form-group inputFamilyName">
@@ -98,6 +99,7 @@
                             <div class="col-sm-8 input-holder">
                                 <input type="text" class="form-control" id="inputFamilyName" placeholder="Family Name">
                             </div>
+                            <div class="clearfix"></div>
                             <p class="error-feedback">Invalid Family Name</p>
                         </div>
                         <div class="form-group inputMonth inputDate inputYear">
@@ -107,6 +109,7 @@
                                 <input type="text" class="form-control dob-input" id="inputDate" placeholder="DD">
                                 <input type="text" class="form-control dob-input" id="inputYear" placeholder="YYYY">
                             </div>
+                            <div class="clearfix"></div>
                             <p class="error-feedback">Invalid Date of Birth</p>
                         </div>
                         <div class="form-group inputNationality">
@@ -121,6 +124,7 @@
                                     <option>United States of America</option>
                                 </select>
                             </div>
+                            <div class="clearfix"></div>
                             <p class="error-feedback">Invalid Country</p>
                         </div>
                         <div class="form-group inputStreet inputStrtNo">
@@ -130,9 +134,10 @@
                                 <label for="inputStrtNo" class="col-sm-3 control-label str-no">No.<sup>*</sup></label>
                                 <input type="text" class="form-control" id="inputStrtNo" placeholder="No.">
                             </div>
+                            <div class="clearfix"></div>
                             <p class="error-feedback">Invalid Street and No</p>
                         </div>
-                        <div class="form-group inputPostal inputCity has-code-error-feedback">
+                        <div class="form-group inputPostal inputCity">
                             <label for="inputPostal" class="col-sm-3 control-label">Postal Code<sup>*</sup></label>
                             <div class="col-sm-8 input-holder">
                                 <input type="text" class="form-control" id="inputPostal" placeholder="Postal Code">
@@ -141,6 +146,7 @@
                                 <label for="inputCity" class="col-sm-3 control-label city">City<sup>*</sup></label>
                                 <input type="text" class="form-control" id="inputCity" placeholder="City">
                             </div>
+                            <div class="clearfix"></div>
                             <p class="error-feedback">Invalid Code and City</p>
                         </div>
                         <div class="form-group inputCountry">
@@ -153,6 +159,7 @@
                                     <option>United States of America</option>
                                 </select>
                             </div>
+                            <div class="clearfix"></div>
                             <p class="error-feedback">Invalid Country</p>
                         </div>
                         <div class="form-group inputEmail">
@@ -160,6 +167,7 @@
                             <div class="col-sm-8 input-holder">
                                 <input type="email" class="form-control" id="inputEmail" placeholder="E-mail">
                             </div>
+                            <div class="clearfix"></div>
                             <p class="error-feedback">Invalid Email</p>
                         </div>
                         <div class="form-group">
@@ -173,6 +181,7 @@
                             <div class="col-sm-8 input-holder">
                                 <input type="tel" class="form-control" id="inputMobile" placeholder="Mobile">
                             </div>
+                            <div class="clearfix"></div>
                             <p class="error-feedback">Invalid Mobile number</p>
                         </div>
                         <div class="form-group">
