optimised the images

--- a/process-start.html
+++ b/process-start.html
@@ -93,7 +93,7 @@
                     <p>Browser based video telephony can be used directly with the following browsers:</p>
                     <ul class="list-unstyled browsers-list">
                         <li>
-                            <img src="assets/chrome-icon.ico" alt="Chrome">
+                            <img src="assets/chrome-icon.png" alt="Chrome">
                             <a class="" href="#">Chrome</a>
                         </li>
                         <li>
