corrected the number type to text

--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
                         <div class="form-group">
                             <label for="inputDOB" class="col-sm-3 control-label">Date Of Birth<sup>*</sup></label>
                             <div id="inputDOB" class="col-sm-8 input-holder">
-                                <input type="number" class="form-control dob-input" id="inputMonth"
+                                <input type="text" class="form-control dob-input" id="inputMonth"
                                        placeholder="MM" required>
-                                <input type="number" class="form-control dob-input" id="inputDate"
+                                <input type="text" class="form-control dob-input" id="inputDate"
                                        placeholder="DD" required>
-                                <input type="number" class="form-control dob-input" id="inputYear"
+                                <input type="text" class="form-control dob-input" id="inputYear"
                                        placeholder="YYYY" required>
                             </div>
                             <div class="clearfix"></div>
@@ -149,7 +149,7 @@
                         <div class="form-group">
                             <label for="inputPostal" class="col-sm-3 control-label">Postal Code<sup>*</sup></label>
                             <div class="col-sm-8 input-holder">
-                                <input type="number" class="form-control" id="inputPostal"
+                                <input type="text" class="form-control" id="inputPostal"
                                        placeholder="Postal Code" required>
                                 <div class="clearfix visible-xs"></div>
                                 <p class="error-code-feedback inputPostal hidden-sm hidden-md hidden-lg no-display">
