--- a/process-start.html
+++ b/process-start.html
@@ -51,6 +51,7 @@
                                     <a href="#" class="btn btn-default submit-form">
                                         <span class="glyphicon glyphicon-triangle-right"></span>
                                         Start Browser based Video Telephony</a>
+                                    <a href="#" class="btn btn-default submit-form end">End Session</a><br/>
                                     Click on 'Start Browser based Video Telephony' in order to start the online
                                     identification process.
                                 <p>
