added animated gif to process-start.html

--- a/process-start.html
+++ b/process-start.html
@@ -47,13 +47,15 @@
                                     Video Telephony" button and a WebID Solutions employee will guide you through the
                                     identification process.
                                 </p>
-                                <p id="start-telephony">
+                                <p id="start-telephony" class="">
                                     <a href="#" class="btn btn-default submit-form">
                                         <span class="glyphicon glyphicon-triangle-right"></span>
                                         Start Browser based Video Telephony</a>
                                     <a href="#" class="btn btn-default submit-form end">End Session</a><br/>
-                                    Click on 'Start Browser based Video Telephony' in order to start the online
-                                    identification process.
+                                    <span class="before-start">Click on 'Start Browser based Video Telephony' in order to start the online
+                                    identification process.</span>
+                                    <span class="on-start"><br/><br/>Checking your internet connection...<br/>
+                                    <img src="assets/dial-loader-2.gif"><br/><br/></span>
                                 <p>
                             </li>
                             <li>
